--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="TaniKu - Ayo majukan petani indonesia dengan digitalisasi.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="shop_app">
-  <link rel="apple-touch-icon" href="icons/farmer_ccexpress.png">
+  <meta name="apple-mobile-web-app-title" content="TaniKu">
+  <link rel="apple-touch-icon" href="icons/farmer_192.png">
 
   <title>TaniKu - Go Healthy Go Life</title>
   <link rel="manifest" href="manifest.json">
@@ -33,7 +33,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '543511857';
+    var serviceWorkerVersion = '3852978630';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
